ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejsapp-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nodejsapp-ns
  name: nodejsapp
spec:
  selector:
    matchLabels:
      app: nodejsapp
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
        - name: nodejsapp
          image: 734131281465.dkr.ecr.ap-southeast-1.amazonaws.com/nodejsapp:latest
          ports:
            - containerPort: 3000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    kubernetes.io/ingress.class: alb
  labels:
    app: nodejsapp
  name: nodejsapp
  namespace: nodejsapp-ns
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nodejsapp
          servicePort: 3000
        path: /*
status:
  loadBalancer: {}
